crates/veritool-cli/tests/snapshots/snapshot_tests__snap_counter_ff_module_json.snap
---
source: crates/veritool-cli/tests/snapshot_tests.rs
assertion_line: 78
expression: "run(&[\"ff\", \"-m\", \"counter\", \"--format\", \"json\", f.to_str().unwrap(),])"
---
{
  "ff_count": 8,
  "module": "counter"
}
