crates/veritool-cli/tests/snapshots/snapshot_tests__snap_counter_ports_json.snap
---
source: crates/veritool-cli/tests/snapshot_tests.rs
assertion_line: 37
expression: "run(&[\"ports\", \"--format\", \"json\", f.to_str().unwrap()])"
---
{
  "module": "counter",
  "ports": [
    {
      "direction": "input",
      "name": "clk",
      "type": "logic",
      "width": ""
    },
    {
      "direction": "input",
      "name": "rst",
      "type": "logic",
      "width": ""
    },
    {
      "direction": "input",
      "name": "en",
      "type": "logic",
      "width": ""
    },
    {
      "direction": "output",
      "name": "q",
      "type": "logic",
      "width": "[WIDTH-1:0]"
    }
  ]
}
