crates/veritool-cli/tests/snapshots/snapshot_tests__snap_fifo_ff_hierarchy_text.snap
---
source: crates/veritool-cli/tests/snapshot_tests.rs
assertion_line: 91
expression: "run(&[\"ff\", f.to_str().unwrap()])"
---
+-----------+---------+-----------+
| Module    | Own FFs | Total FFs |
+=================================+
| fifo_sync | 138     | 138       |
+-----------+---------+-----------+
