crates/veritool-cli/tests/snapshots/snapshot_tests__snap_gen_if_param_override_ff_text.snap
---
source: crates/veritool-cli/tests/snapshot_tests.rs
assertion_line: 147
expression: "run(&[\"ff\", \"--top\", \"gen_if_override_top\", f.to_str().unwrap()])"
---
+---------------------+---------+-----------+
| Module              | Own FFs | Total FFs |
+===========================================+
| gen_if_override_top | 0       | 40        |
|---------------------+---------+-----------|
| sel_core            | 0       | 8         |
|---------------------+---------+-----------|
| narrow_core         | 8       | 8         |
|---------------------+---------+-----------|
| sel_core            | 0       | 32        |
|---------------------+---------+-----------|
| wide_core           | 32      | 32        |
+---------------------+---------+-----------+
