crates/veritool-cli/tests/snapshots/snapshot_tests__snap_top_with_subs_hier_json.snap
---
source: crates/veritool-cli/tests/snapshot_tests.rs
assertion_line: 111
expression: "run(&[\"hier\", \"--top\", \"top1\", \"--format\", \"json\", f.to_str().unwrap(),])"
---
{
  "children": [
    {
      "children": [],
      "instance": "u_alu",
      "module": "alu"
    },
    {
      "children": [],
      "instance": "u_rf",
      "module": "reg_file"
    }
  ],
  "module": "top1"
}
